--- a/estilodeform.css
+++ b/estilodeform.css
@@ -2,14 +2,14 @@
 
 body{
   
-    background-image: url('https://www.solofondos.com/wp-content/uploads/2015/11/new-fondo1lateral.jpg');
+    background-image: url('https://i.pinimg.com/originals/06/ef/73/06ef7361da50f4689a28c98d01f40dc8.jpg');
     background-size: 100% 100%;
     background-attachment: fixed;
 }
 
 .recuadro{
     border-radius: 7px;
-    border-top: 5px solid rgb(0, 195, 255);
+    border-top: 5px solid rgb(0, 0, 0);
 width: 300px;
 box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.4);
 background-color: rgba(133, 133, 133, 0.671);
