--- a/estilodeform.css
+++ b/estilodeform.css
@@ -2,7 +2,7 @@
 
 body{
   
-    background-image: url('https://i.pinimg.com/originals/06/ef/73/06ef7361da50f4689a28c98d01f40dc8.jpg');
+    background-image: url('https://i.pinimg.com/originals/7b/df/15/7bdf15057f0b60c0930865525024a33f.png');
     background-size: 100% 100%;
     background-attachment: fixed;
 }
@@ -12,7 +12,7 @@ body{
     border-top: 5px solid rgb(0, 0, 0);
 width: 300px;
 box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.4);
-background-color: rgba(133, 133, 133, 0.671);
+background-color: rgba(0, 0, 0, 0.671);
 padding: 20px;
 margin: 8% auto 0;
 text-align: center;
@@ -24,7 +24,7 @@ text-align: center;
 input, textarea{
     
     height: 24px;
-    border-bottom: 5px solid darkblue;
+    border-bottom: 5px solid rgb(0, 0, 0);
    
 }
 textarea{
@@ -32,7 +32,7 @@ textarea{
 }
 input[type=submit], 
 input[type=button]{
-    background-color: rgb(25, 0, 255);
+    background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     text-transform: uppercase;
     height: 30px;
@@ -42,19 +42,19 @@ input[type=button]{
 input[type=submit]:hover, 
 input[type=button]:hover{
     
-    background-color:rgb(111, 0, 255);
+    background-color:rgb(0, 0, 0);
     color: rgb(0, 0, 0);
 }
 input[type=text]:valid, 
 textarea:valid,
 input[type=date]:valid{
     
-    background-color: rgb(156, 253, 177);
+    background-color: rgb(34, 37, 206);
 }
 input[type=text]:invalid, 
 textarea:invalid,
 input[type=date]:invalid{
-    background-color:rgb(126, 28, 255);
+    background-color:rgb(255, 255, 255);
 }
 label{
     font-style: unset;
@@ -65,25 +65,25 @@ label{
 .separador{
     border-radius: 4px;
     background-origin: padding-box;
-    border-color: rgb(126, 28, 255);
+    border-color: rgb(0, 0, 0);
 }
 .hr{
     height:2px;
-    background-color: rgb(126, 28, 255);
+    background-color: rgb(0, 0, 0);
 }
 ul{
     list-style: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    box-shadow: 0 0 10px rgb(111, 0, 255);
+    box-shadow: 0 0 10px rgb(0, 0, 0);
 }
 li{
     float: left;
 }
 li a{
 display: block;
-color: white;
+color: rgb(21, 93, 228);
 text-align: center;
 padding: 10px 10px;
 text-decoration: none;
@@ -91,10 +91,10 @@ text-decoration: none;
 
 }
 li a :hover{
-background-color: rgba(133, 133, 133, 0.671);
+background-color: rgba(100, 100, 100, 0.671);
 
 }
 .ative{
-    background-color: royalblue;
+    background-color: rgb(29, 74, 209);
 }
 
