--- a/estiloEstudiante.css
+++ b/estiloEstudiante.css
@@ -4,7 +4,7 @@ html{
 
     }
 body {
-	background-image: url('https://www.paginaswebs.com/wp-content/uploads/2016/08/fondo_web.jpg');
+	background-image: url('https://i.pinimg.com/originals/7b/df/15/7bdf15057f0b60c0930865525024a33f.png');
 	background-size: 100% 100%;
 	background-attachment: fixed;
 }
