--- a/estiloEstudiante.css
+++ b/estiloEstudiante.css
@@ -13,7 +13,7 @@ body {
 	max-width: 450px;
 	height: auto;
 	background-color: rgba(74, 66, 66, 0.445);
-	margin: 5% auto;
+	margin: left;
 	padding-bottom: 1rem;
 	
 }
