--- a/estilodeform.css
+++ b/estilodeform.css
@@ -14,7 +14,7 @@ width: 300px;
 box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.4);
 background-color: rgba(0, 0, 0, 0.671);
 padding: 20px;
-margin: 8% auto 0;
+margin-top: 8% auto 0;
 text-align: center;
 
 }
